# msml

./: .gitignore  README.md
librarybuild/: CMakeLists.txt
librarybuild/src/: MSBLAS.h  Real_Vector.cpp  Real_Vector.h
librarybuild/src/mkl/: mkl.fi  mkl_blas_omp_offload.f90  mkl_blas_omp_offload_lp64.f90  mkl_blas_omp_offload_lp64_no_array_check.f90  mkl_dfti_omp_offload.f90  mkl_lapack.fi  mkl_lapack_omp_offload.f90  mkl_lapack_omp_offload_ilp64.f90  mkl_lapack_omp_variant_ilp64.f90  mkl_omp_offload.f90  mkl_sparse_qr.f90  mkl_vml_omp_variant.f90  mkl_vsl_omp_offload.f90  mkl_vsl_omp_variant.f90
librarybuild/src/mkl/fftw/: fftw3_mkl_f77.h
librarybuild/src/mkl/fftw/offload/: fftw3_omp_offload.h  fftw3_omp_offload_common.h
librarybuild/src/mkl/intel64/ilp64/: blas95.mod
librarybuild/src/mkl/intel64/lp64/: blas95.mod  mkl_service.mod
librarybuild/src/mkl/oneapi/mkl/: bfloat16.hpp  blas.hpp  dfti.hpp  stats.hpp  types.hpp
librarybuild/src/mkl/oneapi/mkl/blas/: buffer.hpp  usm.hpp
librarybuild/src/mkl/oneapi/mkl/experimental/data_fitting/: interpolate.hpp
librarybuild/src/mkl/oneapi/mkl/rng/: device.hpp  engines.hpp
librarybuild/src/mkl/oneapi/mkl/rng/detail/: engine_base.hpp
librarybuild/src/mkl/oneapi/mkl/rng/device/: engines.hpp  types.hpp
librarybuild/src/mkl/oneapi/mkl/rng/device/detail/: bits_impl.hpp  distribution_base.hpp  exponential_impl.hpp  gaussian_impl.hpp  lognormal_impl.hpp  philox4x32x10_impl.hpp  uniform_impl.hpp
librarybuild/src/mkl/oneapi/mkl/vm/: decls.hpp  usm.hpp
test/: Test_Const_Real_Vector_Wrapper.cpp  test_Matrix_API.h  (+5 more)
(+42 files in other folders)
